--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: ${{ matrix.manylinux_image }}-${{ matrix.python }}-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   build_macos_wheels:
@@ -57,7 +58,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
           python-version: "3.10"
@@ -74,6 +75,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: macos
           path: ./wheelhouse/*.whl
 
   build_pure_wheels:
@@ -81,14 +83,14 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python: [3.9]
+        python: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
       - name: Install packaging tools
         run: |
           python -m pip install --upgrade pip setuptools importlib_metadata wheel
@@ -100,6 +102,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: pp${{ matrix.python }}
           path: dist/*.whl
 
   build_sdist:
@@ -118,6 +121,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: sdist
           path: dist/*.tar.gz
 
   upload_pypi:
@@ -127,8 +131,8 @@ jobs:
       - name: Download distributions for publishing.
         uses: actions/download-artifact@v4
         with:
-          name: artifact
           path: dist
+          merge-multiple: true
 
       - name: Publish distributions to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
