--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 isolated_build = True
 envlist =
-    {py39,py310,py311,py312,py313}-django{40,41,42},
+    {py39,py310,py311,py312}-django{40,41,42},
     {py310,py311,py312}-django{50a},
 [testenv]
 passenv =
@@ -51,6 +51,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{310,311,312,313}-django{42,52}]
+[testenv:py{38,39,310,311,312,313}-django{40,41,42,50a}]
 commands =
     pytest {posargs} --asyncio-mode=auto
